[package]
name = "rusted_pipe"
version = "0.0.2"
authors = ["Simone Zandara <simone.zandara@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "rusted_pipe"
path = "src/lib.rs"
description = "Real time processing library for developing multithreaded ML pipelines, written in Rust."


[dependencies]
approx = "0.4"
lazy_static = "1.4.0"
byteorder = "1.4.3"
crossbeam = {version = "0.8.1"}
rand = {version = "0.8.4"}
itertools = {version = "0.10.3"}
anyhow = {version = "1.0.43"}
thiserror = {version = "1.0"}
mockall = {version = "0.11.0"}
mockall_double = {version = "0.2.1"}
indexmap = {version = "1.7.0"}
ringbuffer = { version = "^0.11.1" }
paste = { version = "^1.0.11" }
log = {version = "^0.4.17"}
atomic = "0.5"
rstest = "^0.16.0"
derive_builder = "^0.12.0"
prometheus = "^0.13.3"
derive-new = "0.5"
http-body-util = "=0.1.0-rc.2"
bytes = "^1.4.0"
pyroscope = "0.5.4"
pyroscope_pprofrs = "0.2"
rusty_pool = "^0.7.0"
prometheus_exporter = "^0.8.5"